# ti-lprf-pacs

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md
pacs/cc13x0/: Cargo.toml  device.x
pacs/cc13x0/src/: aon_batmon.rs  aon_event.rs  aon_ioc.rs  aon_sysctl.rs  aux_adi4.rs  aux_aiodio1.rs  aux_ddi0_osc.rs  aux_evctl.rs  aux_sce.rs  aux_smph.rs  aux_tdcif.rs  aux_timer.rs  ccfg.rs  cpu_itm.rs  cpu_tiprop.rs  crypto.rs  event.rs  fcfg1.rs  gpt1.rs  lib.rs  prcm.rs  trng.rs
pacs/cc13x0/src/aon_batmon/: batmonp0.rs  flashpumpp0.rs  temp.rs  tempp1.rs  tempp2.rs
pacs/cc13x0/src/aon_event/: evtomcusel.rs  mcuwusel.rs  rtcsel.rs
pacs/cc13x0/src/aon_ioc/: ioclatch.rs
pacs/cc13x0/src/aon_rtc/: ch1capt.rs  ch1cmp.rs  evflags.rs  sync.rs
pacs/cc13x0/src/aon_sysctl/: pwrctl.rs  resetctl.rs  sleepctl.rs
pacs/cc13x0/src/aon_wuc/: auxclk.rs  auxctl.rs  ctl0.rs  ctl1.rs  jtagusercode.rs  mcucfg.rs  mcuclk.rs  osccfg.rs  rechargecfg.rs  rechargestat.rs
pacs/cc13x0/src/aux_adi4/: mux0.rs  mux3.rs  mux4.rs
pacs/cc13x0/src/aux_aiodio0/: gpiodie.rs  gpiodin.rs  gpiodout.rs  gpiodoutset.rs
pacs/cc13x0/src/aux_aiodio1/: gpiodie.rs  gpiodin.rs  gpiodout.rs
pacs/cc13x0/src/aux_anaif/: adcctl.rs  adcfifostat.rs  adctrig.rs
pacs/cc13x0/src/aux_ddi0_osc/: atestctl.rs  stat0.rs  stat1.rs  stat2.rs  xoschfctl.rs
pacs/cc13x0/src/aux_evctl/: combevtomcumask.rs  dmactl.rs  evstat0.rs  evstat1.rs  evtoaonflags.rs  evtoaonpol.rs  evtomcuflags.rs  evtomcuflagsclr.rs  scewevsel.rs  swevset.rs  veccfg0.rs  veccfg1.rs  vecflagsclr.rs
pacs/cc13x0/src/aux_sce/: cpustat.rs  loopcnt.rs  reg1_0.rs  reg5_4.rs  reg7_6.rs  wustat.rs
pacs/cc13x0/src/aux_smph/: autotake.rs  smph1.rs  smph3.rs  smph6.rs
pacs/cc13x0/src/aux_tdcif/: precnt.rs  prectl.rs  result.rs  trigcntload.rs  trigsrc.rs
pacs/cc13x0/src/aux_timer/: t0cfg.rs  t1cfg.rs  t1target.rs
pacs/cc13x0/src/aux_wuc/: auxiolatch.rs  clklfack.rs  clklfreq.rs  mcubusstat.rs  modclken0.rs  modclken1.rs  pwrdwnack.rs  pwroffreq.rs  refclkctl.rs  rtcsubsecinc0.rs  rtcsubsecinc1.rs  rtcsubsecincctl.rs  tdcclkctl.rs  wuevclr.rs  wuevflags.rs
pacs/cc13x0/src/ccfg/: ccfg_prot_127_96.rs  ccfg_prot_63_32.rs  ccfg_prot_95_64.rs  ccfg_tap_dap_0.rs  ext_lf_clk.rs  freq_offset.rs  image_valid_conf.rs  mode_conf.rs  mode_conf_1.rs  rtc_offset.rs  size_and_dis_flags.rs  volt_load_1.rs
pacs/cc13x0/src/cpu_dwt/: comp0.rs  function1.rs  mask0.rs  pcsr.rs  sleepcnt.rs
pacs/cc13x0/src/cpu_fpb/: comp5.rs  comp7.rs  remap.rs
pacs/cc13x0/src/cpu_itm/: stim0.rs  stim15.rs  stim17.rs  stim18.rs  stim19.rs  stim2.rs  stim21.rs  stim23.rs  stim25.rs  stim27.rs  stim29.rs  stim4.rs
pacs/cc13x0/src/cpu_scs/: dcrdr.rs  dfsr.rs  dhcsr.rs  ictr.rs  id_dfr0.rs  id_isar1.rs  id_isar2.rs  id_isar3.rs  id_isar4.rs  id_mmfr0.rs  id_mmfr1.rs  id_mmfr2.rs  id_mmfr3.rs  id_pfr0.rs  nvic_iabr1.rs  nvic_icpr1.rs  nvic_ipr3.rs  nvic_ipr5.rs  nvic_ipr8.rs  nvic_iser1.rs  reserved0.rs  reserved3.rs  reserved5.rs  shpr1.rs
pacs/cc13x0/src/cpu_tiprop/: dyn_cg.rs
pacs/cc13x0/src/cpu_tpiu/: claimclr.rs  devid.rs  ffsr.rs  sspsr.rs
pacs/cc13x0/src/crypto/: aesctl.rs  aesdatain1.rs  aesdatalen0.rs  aesdataout0.rs  aesdataout1.rs  aesdataout2.rs  aesiv.rs  dmabuscfg.rs  dmach0ctl.rs  dmach0len.rs  dmach1ctl.rs  dmach1len.rs  dmahwver.rs  dmaswreset.rs  hwver.rs  irqclr.rs  irqstat.rs  keywritearea.rs  keywrittenarea.rs
pacs/cc13x0/src/event/: auxsel0.rs  cpuirqsel1.rs  cpuirqsel10.rs  cpuirqsel13.rs  cpuirqsel17.rs  cpuirqsel20.rs  cpuirqsel33.rs  cpuirqsel4.rs  cpuirqsel7.rs  frzsel0.rs  gpt0acaptsel.rs  gpt1acaptsel.rs  gpt2acaptsel.rs  rfcsel0.rs  rfcsel1.rs  rfcsel3.rs  rfcsel4.rs  rfcsel5.rs  rfcsel7.rs  udmach13ssel.rs  udmach16bsel.rs  udmach18ssel.rs  udmach1ssel.rs  udmach23ssel.rs  udmach24bsel.rs  udmach25bsel.rs  udmach26ssel.rs  udmach29bsel.rs  udmach29ssel.rs  udmach2bsel.rs  udmach31ssel.rs  udmach3bsel.rs  udmach3ssel.rs  udmach4ssel.rs  udmach5bsel.rs  udmach7bsel.rs  udmach7ssel.rs  udmach8ssel.rs
pacs/cc13x0/src/fcfg1/: ampcomp_ctrl1.rs  ampcomp_th2.rs  (+57 more)
pacs/cc13x1_cc26x1/: Cargo.toml  device.x
pacs/cc13x1_cc26x1/src/: aon_batmon.rs  aon_event.rs  aux_aiodio0.rs  aux_aiodio1.rs  aux_ddi0_osc.rs  aux_evctl.rs  aux_sysif.rs  aux_tdc.rs  ccfg.rs  cpu_itm.rs  cpu_scs.rs  cpu_tpiu.rs  crypto.rs  event.rs  flash.rs  ioc.rs  lib.rs  prcm.rs
pacs/cc13x2x7_cc26x2x7/: Cargo.toml  device.x
pacs/cc13x2x7_cc26x2x7/src/: aon_pmctl.rs  aon_rtc.rs  aux_adi4.rs  aux_aiodio0.rs  aux_anaif.rs  aux_evctl.rs  aux_spim.rs  aux_sysif.rs  aux_timer01.rs  aux_timer2.rs  ccfg.rs  cpu_dwt.rs  cpu_tiprop.rs  crypto.rs  event.rs  fcfg1.rs  flash.rs  i2s0.rs  lib.rs  prcm.rs  sram_mmr.rs  uart1.rs  udma0.rs
pacs/cc13x4_cc26x4/: Cargo.toml  device.x
pacs/cc13x4_cc26x4/src/: aon_ioc.rs  aon_pmctl.rs  aux_mac.rs  aux_sce.rs  aux_smph.rs  aux_sysif.rs  ccfg.rs  cpu_dcb.rs  cpu_dwt.rs  cpu_fpb.rs  cpu_fpu.rs  cpu_icb.rs  cpu_itm.rs  cpu_mpu.rs  cpu_nvic.rs  cpu_sau.rs  cpu_scb.rs  cpu_sig.rs  cpu_systick.rs  cpu_tpiu.rs  crypto.rs  event.rs  fcfg1.rs  flash.rs  gpio.rs  ioc.rs  lib.rs  nvmnw.rs  pka_int.rs  prcm.rs  rfc_dbell.rs  rfc_rat.rs  spi0.rs  spi2.rs  sram_mmr.rs  udma0.rs  vims.rs  wdt.rs
pacs/cc23x0r5/: Cargo.toml
pacs/cc23x0r5/src/: adc.rs  aes.rs  bpu.rs  ccfg.rs  ckmd.rs  clkctl.rs  cpu_rom_table.rs  dbgss.rs  dma.rs  evtsvt.rs  evtull.rs  flash.rs  gpio.rs  i2c0.rs  ioc.rs  lgpt0.rs  lgpt1.rs  lgpt2.rs  lgpt3.rs  lib.rs  lrfddbell.rs  lrfdrxf.rs  lrfdtxf.rs  pmctl.rs  pmud.rs  rtc.rs  scscs.rs  spi0.rs  sys0.rs  systick.rs  systim.rs  uart0.rs  vims.rs
pacs/cc2640r2/: Cargo.toml  device.x
pacs/cc2640r2/src/: aon_ioc.rs  aon_rtc.rs  aux_adi4.rs  aux_anaif.rs  aux_timer.rs  ccfg.rs  cpu_dwt.rs  cpu_scs.rs  fcfg1.rs  flash.rs  gpio.rs  lib.rs  prcm.rs  rfc_dbell.rs  smph.rs  uart0.rs
tests/cc13x4-cc26x4/: Cargo.toml  memory.x
tests/cc13x4-cc26x4/.cargo/: config.toml
tests/cc13x4-cc26x4/src/: main.rs
tests/cc23x0r5/: Cargo.toml  Embed.toml  README.md  memory.x
tests/cc23x0r5/.cargo/: config.toml
tests/cc23x0r5/src/: main.rs
(+5323 files in other folders)
