[workspace]

members = [
    "pacs/*",
    "tests/*",
    "xtask"
]

[workspace.package]
description = "Peripheral Access Crates (PACs) for LRF Microcontrollers"
version = "0.10.2"
keywords = ["no-std", "arm", "cortex-m", "ti", "cc26xx", "cc13xx", "ble", "zigbee", "rf"]
license = "BSD-3-Clause"
license-file = "LICENSE.txt"
repository = "https://github.com/seanmlyons22/ti-lprf-pacs"
edition = "2018"
readme = "README.md"

[workspace.dependencies]
critical-section = "1.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
vcell = "0.1.2"

