[package]
name = "cc13x4_cc26x4_pac"
description = "Peripheral Access Crate for TI's cc13x4/cc26x4 microcontroller family"
documentation = "https://docs.rs/cc13x4_cc26x4_pac"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
cortex-m.workspace = true
vcell.workspace = true

[dependencies.cortex-m-rt]
optional = true
workspace = true

[dependencies.critical-section]
optional = true
workspace = true

[features]
rt = ["cortex-m-rt/device"]
