[package]
authors = ["Sean Lyons <seanmlyons22@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "cc13x4-cc26x4"
version = "0.1.0"

[dependencies]
cortex-m.workspace = true
cortex-m.features = ["critical-section-single-core"]
vcell.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
panic-halt = "0.2.0"
cc13x4_cc26x4_pac = { path = "../../pacs/cc13x4_cc26x4", features = ["critical-section", "rt"]}
rtt-target = { version = "0.3", features = ["cortex-m"] }

# this lets you use `cargo fix`!
[[bin]]
name = "cc13x4-cc26x4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
