[package]
authors = ["Sean Lyons <seanmlyons22@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "cc23x0r5"
version = "0.1.0"

[dependencies]
cortex-m.workspace = true
cortex-m.features = ["critical-section-single-core"]
vcell.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
panic-halt = "0.2.0"
cc23x0r5_pac = { path = "../../pacs/cc23x0r5", features = ["critical-section", "rt"]}
rtt-target = { version = "0.3", features = ["cortex-m"] }

# this lets you use `cargo fix`!
[[bin]]
name = "cc23x0r5"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
